# archetype-test-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: archetype-test.yaml  release.yml
src/: archetype_test_cli.py
src/archetype_harness/: __init__.py  checks.py  cli.py  plugin.py
