[project]
name = "archetype-test-harness"
version = "0.2.0"
description = "Shared integration test harness for p6m-archetypes: render an archetype headlessly, verify the generated project, build it"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "pyyaml>=6",
]

[project.scripts]
archetype-test = "archetype_harness.cli:main"

[project.entry-points.pytest11]
archetype_harness = "archetype_harness.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archetype_harness"]
