[project]
name = "archetype-test-harness"
version = "0.2.0"
description = "Shared integration test harness for p6m-archetypes: render an archetype headlessly, verify the generated project, build it"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "pyyaml>=6",
]

[project.scripts]
archetype-test = "archetype_test_cli:main"

[project.entry-points.pytest11]
archetype_harness = "archetype_harness.plugin"

[tool.uv]
# uv's default rebuild key for path installs is pyproject.toml alone; include the
# sources so `uvx --from ../archetype-test-harness` picks up code edits.
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.py" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/archetype_harness", "src/archetype_test_cli.py"]
sources = ["src"]
